--- a/krew-plugin.yaml
+++ b/krew-plugin.yaml
@@ -7,12 +7,8 @@ spec:
   homepage: https://github.com/kfsoftware/hlf-operator
   shortDescription: "Deploy and manage Hyperledger Fabric Peers, Orderers and Certificate authorities"
   description: |
-    The kubectl-hlf plugin wraps the Hyperledger Fabric Operator and provides a simple
-    interface to create and manage Hyperledger Fabric Peers, Orderers and Certificate authorities
-  caveats: |
-    * For resources that are not in default namespace, currently you must
-      specify -n/--namespace explicitly (the current namespace setting is not
-      yet used).
+    The hlf plugin wraps the Hyperledger Fabric Operator and provides a simple
+    interface to create and manage Hyperledger Fabric Peers, Orderers, and Certificate authorities.
   platforms:
     - selector:
         matchLabels:
